force-app/main/default/objects/Outstanding__c/Outstanding__c.object-meta.xml
<CustomObject>
    <label>Outstanding</label>
    <nameField>
        <displayFormat>OS{000}</displayFormat>
        <label>Outstanding Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outstandings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>