force-app/main/default/objects/Outstanding__c/fields/Commited_Date__c.field-meta.xml
<CustomField>
    <fullName>Commited_Date__c</fullName>
    <label>Commited Date</label>
    <type>Date</type>
</CustomField>